# Aya-mislabeled-samples

./: .gitignore  README.md  ensemble.py  generate_misclassified_samples_per_lang_stats.py  install.sh  lid.py  lid_mismatches.py  lid_utils.py  pyproject.toml  stanza_tokenize.py
Stanza_token/: stanza_tokenization.py
data/: aya_mislabelled_with_evaluation.csv
extract-mislabeled-samples/: extract_mislabeled_samples.py
prototype scripts/: lllm_judge.ipynb  llm_judge.ipynb  llm_judge.py
